kyverno/kyverno-no-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: no-latest-tag

spec:
  validationFailureAction: Enforce
  rules:
    - name: block-latest
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Latest image not allowed"
        pattern:
          spec:
            containers:
              - image: "!*:latest"
